--- a/src/locales/Fa/translation.json
+++ b/src/locales/Fa/translation.json
@@ -1,12 +1,67 @@
 {
-	"home": "خانه",
-	"home-introduction-title": "معرفی",
-	"home-introduction-desc": "ایکس‌تراست یک سیستم سرمایه‌گذاری مطمئن در ترید رمزارزها با استفاده از قراردادهای هوشمند است. در این جا شما با رمزارز تتر در قرارداد هوشمند xTrust سرمایه‌گذاری می‌کنید. تریدرهای xTrust با کمک تحلیل‌های بسیار دقیق روی سرمایه‌ی شما ترید می‌کنند و شما در هر لحظه می‌توانید وضعیت سرمایه‌گذاری خود را در پنل کاربری مشاهده کنید و در صورت تمایل در هر زمان می‌توانید هر مقدار از سرمایه‌ی خود را خارج و به کیف پول خود منتقل کنید. همچنین می‌توانید با معرفی کاربران دیگر به سیستم، در سود آنان شریک شوید.",
-	
-	"start-invest": "شروع سرمایه گذاری",
-	"about": "درباره ما",
-	"terms": "شرایط و ضوابط",
-	"smart-contract": "قرارداد هوشمند",
-	"user-panel": "پنل کاربری",
-	"building-banner": "ارتقای سرمایه‌گذاری در رمزارزها به کمک فناوری قراردادهای هوشمند"
+  "xtrust": "ایکس تراست",
+
+  "home": "خانه",
+  "home-introduction-title": "معرفی",
+  "home-introduction-desc": "ایکس‌تراست یک سیستم سرمایه‌گذاری مطمئن در ترید رمزارزها با استفاده از قراردادهای هوشمند است. در این جا شما با رمزارز تتر در قرارداد هوشمند xTrust سرمایه‌گذاری می‌کنید. تریدرهای xTrust با کمک تحلیل‌های بسیار دقیق روی سرمایه‌ی شما ترید می‌کنند و شما در هر لحظه می‌توانید وضعیت سرمایه‌گذاری خود را در پنل کاربری مشاهده کنید و در صورت تمایل در هر زمان می‌توانید هر مقدار از سرمایه‌ی خود را خارج و به کیف پول خود منتقل کنید. همچنین می‌توانید با معرفی کاربران دیگر به سیستم، در سود آنان شریک شوید.",
+
+  "more": "بیشتر",
+
+  "copy-right": "ایکس تراست .تمامی حقوق محفوظ است.",
+
+  "start-invest": "شروع سرمایه گذاری",
+  "about": "درباره ما",
+  "terms": "شرایط و ضوابط",
+  "smart-contract": "قرارداد هوشمند",
+  "user-panel": "پنل کاربری",
+  "building-banner": "ارتقای سرمایه‌گذاری در رمزارزها به کمک فناوری قراردادهای هوشمند",
+
+  "transparency": "شفافیت",
+  "transparency-desc": "مقدار تمام توکن‌های برنامه همراه با ارزش سرمایه‌ی کاربران در هر لحظه در معرض دید همه‌ی کاربران xTrust است، هر کاربر می‌تواند در هر زمان ارزش سرمایه‌ی کل و نیز ارزش سرمایه‌ی خود را در هر زمان رصد کند.",
+
+  "liquidity": "نقدشوندگی",
+  "liquidity-desc": "کاربران در هر لحظه می‌توانند هر مقدار از سرمایه یا سود خود را به درخواست خود از قرارداد هوشمند xTrust خارج کنند و آن را در کیف پول خود دریافت کنند یا در هر زمان به سرمایه‌ی خود مبلغی را به صورت تتر اضافه کنند.",
+
+  "professional-team": "تیم حرفه‌ای",
+  "professional-team-desc": "تیم ترید xTrust در سال‌های گذشته مسیر فعلی بیت‌کوین و رمزارزهای مهم را بسیار دقیق پیش‌بینی کرده بودند. آنان بر اساس این تجربه مسیر آتی را نیز پیش‌بینی کرده‌اند و می‌توانند سود زیادی از روندهای آتی بگیرند.",
+
+  "main-terms-items-header": "هر کاربر سیستم در صورت سرمایه‌گذاری در این قرارداد هوشمند با شرایط زیر موافقت می‌کند:",
+  "main-terms-item-1": "تا رشد ۳۰۰٪ سرمایه‌ی کاربر سیستم هیچ کارمزدی دریافت نخواهد کرد.",
+  "main-terms-item-2": "هر کاربر شخصا موظف به حفاظت از سرمایه‌ی خویش است. در صورتی که کاربر در هر مرحله با نحوه‌ی کار تیم ترید موافق نباشد می‌تواند سرمایه‌ی خود را برداشت کند.",
+
+  "growth": "رشد",
+  "tether-investment": "تتر سرمایه‌گذاری",
+  "investor": "سرمایه‌گذار",
+
+  "main-smart-contract-title": "قرارداد هوشمند xTrust روی شبکه‌ی بلاکچین BNB در آدرس زیر پیاده‌سازی شده است:",
+  "main-smart-contract-desc": "این قرارداد هوشمند دارای تیک سبز رنگ است، به این معنی که کد قرارداد هوشمند ارائه شده با سورس آن همخوانی کامل دارد.\nدر این قرارداد هوشمند هیچ کس جز فرد سرمایه‌گذار توانایی برداشت سرمایه یا سود از قرارداد هوشمند را ندارد.\nتیم ترید فقط اجازه‌ی ترید برای تعداد محدودی توکن در شبکه‌ی BNB را دارند. فهرست این توکن‌ها در ادامه آمده است.",
+
+  "about-text": "شما احتمالاً مطلع هستید که از سه ماهه آخر سال 2024 تا سه ماهه اول سال 2026، دوره یک و نیم ساله معجزه‌های ارزهای دیجیتال خواهد بود. تنها مثال مشابه رشد ارزهای دیجیتال در این دوره، رشد ارزهای دیجیتال در سه ماهه آخر سال 2017 است، و شاید این دوره با چنین شدتی برای مدت‌ها تکرار نشود.\n\nاز طرف دیگر، اگر قبلاً در دنیای ارزهای دیجیتال فعال بوده‌اید، احتمالاً می‌دانید که افراد به دلایل مختلف در این بازار ضررهای زیادی می‌کنند. برخی از این دلایل شامل تحلیل نادرست، خرید یا فروش احساسی و عدم پیروی از یک استراتژی معاملاتی مؤثر است.\n\nxTrust با بهره‌گیری از یک تیم معاملاتی حرفه‌ای، هدفش این است که به شما کمک کند تا با کمترین ریسک، بیشترین سود را از این بازار کسب کنید. شما می‌توانید برخی از پیش‌بینی‌های موفق قبلی تیم را در شبکه‌های اجتماعی ما مشاهده کنید. xTrust همچنین از یک سیستم مبتنی بر قرارداد هوشمند استفاده کرده است تا اعتماد سرمایه‌گذاران را جلب کند و امکان نظارت مستمر بر عملیات را فراهم آورد، این اطمینان را می‌دهد که سرمایه‌گذاران همیشه از وضعیت سرمایه خود مطلع هستند و می‌توانند هر زمان که بخواهند سرمایه خود را برداشت کنند.\n\nتمام عملیات تیم معاملاتی به طور انحصاری در صرافی غیرمتمرکز Pancake Swap V2 انجام می‌شود. علاوه بر این، برای جلب اعتماد کاربران، تمام عملیات معاملاتی بر روی تعداد محدودی از ارزهای دیجیتال انجام می‌شود. لیست این ارزهای دیجیتال در صفحه {smartContractButton} در دسترس است.\n\nبه دلیل ماهیت عملیاتی این صرافی غیرمتمرکز، تیم معاملاتی نمی‌تواند از هیچ اهرمی در این بازار استفاده کند. تمام معاملات با اهرم 1 انجام خواهد شد و سودها تنها از افزایش قیمت حاصل می‌شوند. این ویژگی‌ها منجر به کمترین ریسک برای سرمایه کاربران می‌شود.\n\nدر اینجا، شما می‌توانید در هر زمان و به هر مقدار با استفاده از ارز دیجیتال تتر (USDT) سرمایه‌گذاری کنید یا به سرمایه‌گذاری خود اضافه کنید. سرمایه‌گذاران همچنین می‌توانند هر مقدار از سود یا سرمایه خود را در هر زمان از قرارداد هوشمند برداشت کرده و به کیف پول خود انتقال دهند. قوانین مربوط به محاسبه سود و هزینه‌های سیستم در صفحه {termsButton} در دسترس است.",
+
+  "investment-opportunities": "فرصت‌های سرمایه‌گذاری",
+  "investment-opportunities-desc": "در قراردادهای هوشمند xTrust با تتر سرمایه‌گذاری کنید و به دنیایی از فرصت‌های معاملاتی امن و سودآور دسترسی پیدا کنید.",
+
+  "trading-strategies": "استراتژی‌های معاملاتی",
+  "trading-strategies-desc": "معامله‌گران ما از تحلیل‌های پیشرفته استفاده می‌کنند تا اطمینان حاصل کنند که سرمایه‌گذاری‌های شما در بازار پویای ارزهای دیجیتال بیشترین بازدهی را داشته باشد.",
+
+  "user-benefits": "مزایای کاربران",
+  "user-benefits-desc": "سرمایه‌گذاری‌های خود را 24/7 زیر نظر داشته باشید و از انعطاف‌پذیری برداشت فوری وجوه و اشتراک سود از طریق معرفی بهره‌مند شوید.",
+
+  "terms-termsDescription": "هر کاربر سیستم در صورت سرمایه‌گذاری در این قرارداد هوشمند با شرایط زیر موافقت می‌کند:",
+  "terms-investmentWithdrawal": "🔵 کاربر در هر زمان می‌تواند به هر میزان در سیستم سرمایه‌گذاری کند یا سرمایه‌ی خود یا هر مقدار از سود آن را از سیستم خارج کند.",
+  "terms-userResponsibility": "🔵 هر کاربر شخصا موظف به حفاظت از سرمایه‌ی خویش است. در صورتی که کاربر در هر مرحله با نحوه‌ی کار تیم ترید موافق نباشد می‌تواند سرمایه‌ی خود را برداشت کند.",
+  "terms-systemFees": "🔵 پرداخت کارمزد سیستم به ترتیب زیر می‌باشد:",
+  "terms-noFeesUpTo300": "تا رشد ۳۰۰٪ سرمایه‌ی کاربر سیستم هیچ کارمزدی دریافت نخواهد کرد.",
+  "terms-feesAbove300": "برای رشد بیش از ۳۰۰٪ سیستم به طور خودکار ۵۰٪ از رشد سرمایه‌ی بیش از ۳۰۰٪ کاربر را در هنگام برداشت کاربر، برداشت خواهد نمود.",
+  "terms-referrerFee": "از میزان ۵۰٪ برداشتی، ۱٪ در همان زمان به حساب شخص معرف فرد سرمایه‌گذار در سیستم واریز خواهد شد.",
+  "terms-example": "🔵 مثال: فرض کنید کاربر ۱۰۰۰ تتر در سیستم سرمایه‌گذاری کرده باشد و پس از مدتی با فعالیت‌های تیم ترید، میزان سرمایه‌ی کاربر به ۵۰۰۰ تتر یا معادل آن برسد. در این صورت تا رشد ۳۰۰۰ تتر مشمول هیچ کارمزدی نخواهد بود. از ۲۰۰۰ تتر دیگر رشد سرمایه‌ی کاربر در هنگام برداشت کاربر، ۵۰٪ آن به میزان ۱۰۰۰ تتر کسر خواهد شد. از این ۱۰۰۰ تتر برداشتی ۲۰ تتر به حساب فرد معرف و ۹۸۰ تتر به حساب تیم ترید و مؤسس سیستم واریز خواهد شد.",
+  "terms-partialWithdrawal": "🔵 کارمزدهای مذکور فقط در زمان برداشت کاربر وفقط از میزان برداشت وی کسر خواهد شد. بنابراین در مثال بالا اگر کاربر فقط ۱۰۰۰ تتر از ۵۰۰۰ تتر خود را برداشت کند، مبلغ برداشتی به همان نسبت از ۱۰۰۰ تتر کسر خواهد شد. یعنی از ۱۰۰۰ تتر برداشتی ۲۰۰ تتر کسر می‌شود و ۸۰۰ تتر به کیف پول کاربر واریز می‌شود. از ۲۰۰ تتر کسر شده ۴ تتر به حساب فرد معرف کاربر مورد نظر و ۱۹۶ تتر به حساب تیم ترید و مؤسس سیستم واریز می‌شود.",
+  "terms-additionalInvestments": "🔵 کاربر در هر زمان می‌تواند سرمایه‌ی خود را به هر میزان که بخواهد افزایش دهد. اما مبنای محاسبه‌ی رشد سرمایه‌ی وی، اولین سرمایه گذاری او می‌باشد.",
+  "terms-currencyAndNetwork": "🔵 سرمایه‌گذاری کاربر فقط با رمزارز تتر روی شبکه‌ی BNB قابل انجام است. سیستم هیچ مسئولیتی در مقابل رمزارزهای دیگر که کاربر به اشتباه به سیستم واریز می‌کند، ندارد.",
+  "terms-smartContractMethods": "🔵 رمزارز تتر سرمایه‌گذاری شده فقط باید از طریق متدهای قرارداد هوشمند که در این سایت به کار رفته، در سیستم سرمایه‌گذاری شود و از واریز مستقیم تتر به قرارداد هوشمند xTrust خودداری گردد. سیستم هیچ مسئولیتی در مقابل مبالغی که خارج از متدهای قرارداد هوشمند به حساب آن واریز می‌شود، ندارد.",
+  "terms-tradingOperations": "🔵 تمامی عملیات تیم تریدر فقط در صرافی غیرمتمرکز Pancake Swap V2 انجام می‌شود. به علاوه تمام عملیات ترید جهت اعتماد کاربران فقط روی تعداد محدودی از رمزارزها انجام می‌شود. فهرست این رمزارزها در صفحه‌ی قرارداد هوشمند آمده است.",
+  "terms-withdrawalProcess": "🔵 از آن رو که سرمایه‌ی قرارداد هوشمند در زمان کار سیستم به صورت رمزارزهای مختلف در قرارداد هوشمند ذخیره شده است، در هنگام برداشت سود یا اصل سرمایه‌ی کاربر، سیستم به طور خودکار به نسبت رمزارزهای موجود مقدار درخواستی کاربر را به حساب وی واریز خواهد نمود. علاوه بر آن سیستم امکان تبدیل خودکار همه‌ی رمزارزهای واریزی به تتر را از طریق همان صرافی غیر متمرکز دارد. ولی اکیدا به سرمایه‌گذاران عزیز به خصوص در برداشت مبالغ زیاد توصیه می‌کنیم از این قابلیت استفاده نکنند تا به دلیل اسلیپیج صرافی غیرمتمرکز سرمایه‌ی آنان تقلیل پیدا نکند.",
+  "terms-securityTips": "🔵 توصیه‌ی ما این است سرمایه‌گذاران محترم پس از برداشت سود یا سرمایه شخصا عملیات تبدیل به تتر را در صرافی‌های غیرمتمرکز انجام دهند تا با مدیریت صحیح با کمترین میزان تقلیل سرمایه‌شان را به تتر تبدیل کنند.",
+  "terms-securityNotices": "🔵 توصیه‌ی همیشگی ما در سرمایه‌گذاری در ترید این است که همیشه حاشیه‌ی امن در سرمایه‌گذاری خود را حفظ کنید و از سرمایه‌گذاری مبالغی که امنیت زندگی شما به آن وابسته است، اکیدا خودداری نمایید.",
+  "terms-stayUpdated": "🔵 در هنگام استفاده از xTrust نکات امنیتی لازم با علامت 🔴 به شما اعلام خواهد شد. لطفا به این نکات امنیتی توجه داشته باشید."
 }
