--- a/src/locales/Fa/translation.json
+++ b/src/locales/Fa/translation.json
@@ -63,5 +63,32 @@
   "terms-withdrawalProcess": "🔵 از آن رو که سرمایه‌ی قرارداد هوشمند در زمان کار سیستم به صورت رمزارزهای مختلف در قرارداد هوشمند ذخیره شده است، در هنگام برداشت سود یا اصل سرمایه‌ی کاربر، سیستم به طور خودکار به نسبت رمزارزهای موجود مقدار درخواستی کاربر را به حساب وی واریز خواهد نمود. علاوه بر آن سیستم امکان تبدیل خودکار همه‌ی رمزارزهای واریزی به تتر را از طریق همان صرافی غیر متمرکز دارد. ولی اکیدا به سرمایه‌گذاران عزیز به خصوص در برداشت مبالغ زیاد توصیه می‌کنیم از این قابلیت استفاده نکنند تا به دلیل اسلیپیج صرافی غیرمتمرکز سرمایه‌ی آنان تقلیل پیدا نکند.",
   "terms-securityTips": "🔵 توصیه‌ی ما این است سرمایه‌گذاران محترم پس از برداشت سود یا سرمایه شخصا عملیات تبدیل به تتر را در صرافی‌های غیرمتمرکز انجام دهند تا با مدیریت صحیح با کمترین میزان تقلیل سرمایه‌شان را به تتر تبدیل کنند.",
   "terms-securityNotices": "🔵 توصیه‌ی همیشگی ما در سرمایه‌گذاری در ترید این است که همیشه حاشیه‌ی امن در سرمایه‌گذاری خود را حفظ کنید و از سرمایه‌گذاری مبالغی که امنیت زندگی شما به آن وابسته است، اکیدا خودداری نمایید.",
-  "terms-stayUpdated": "🔵 در هنگام استفاده از xTrust نکات امنیتی لازم با علامت 🔴 به شما اعلام خواهد شد. لطفا به این نکات امنیتی توجه داشته باشید."
+  "terms-stayUpdated": "🔵 در هنگام استفاده از xTrust نکات امنیتی لازم با علامت 🔴 به شما اعلام خواهد شد. لطفا به این نکات امنیتی توجه داشته باشید.",
+
+  "smartContractOverview": "مرور قرارداد هوشمند",
+  "smartContractDescription": "قرارداد هوشمند یک فناوری پیشرفته مرتبط با توسعه بلاکچین است. این فناوری به شما امکان می‌دهد تا از مزایای بلاکچین مانند غیرمتمرکز بودن، شفافیت، تغییرناپذیری، قابل تأیید بودن، در دسترس بودن و امنیت برای برنامه‌های کامپیوتری استفاده کنید. در این فناوری، برنامه کامپیوتری شما که شامل مجموعه‌ای از داده‌ها و توابع است، روی بلاکچین ثبت می‌شود. هر کاربری با مجوز مناسب می‌تواند توابع مورد نظر را اجرا کند، داده‌ها را روی بلاکچین ذخیره کند یا ارزهای دیجیتال را به داخل یا خارج از برنامه انتقال دهد.",
+  "smartContractHistory": "فناوری قرارداد هوشمند برای اولین بار در سال ۲۰۱۵ توسط ویتالیک بوترین در بلاکچین اتریوم به طور کامل پیاده‌سازی شد و از آن زمان پیشرفت‌های چشمگیری داشته است.",
+  "xTrustSmartContract": "قرارداد هوشمند ایکس تراست",
+  "xTrustDescription": "xTrust تمام عملیات خود را در یک قرارداد هوشمند ثبت کرده است. این قرارداد هوشمند می‌تواند عملیات اصلی زیر را انجام دهد:",
+  "xTrustOperations": [
+    "واریز وجوه سرمایه‌گذاران به صورت USDT به قرارداد هوشمند.",
+    "انجام معاملات با استفاده از صرافی غیرمتمرکز Pancake Swap V2.",
+    "محاسبه سود سرمایه‌گذاران.",
+    "بازپرداخت سود یا سرمایه به سرمایه‌گذاران."
+  ],
+  "smartContractEnsures": "قرارداد هوشمند تضمین می‌کند:",
+  "smartContractGuarantees": [
+    "تمام عملیات واریز، برداشت و معامله کاملاً شفاف هستند.",
+    "کاربران فقط می‌توانند وجوه را به حساب خود واریز کنند و از همان حساب برداشت کنند.",
+    "تیم معاملاتی فقط می‌تواند توکن‌های از پیش تعریف شده خاص را معامله کند.",
+    "تیم معاملاتی نمی‌تواند وجوه را خارج از صرافی Pancake Swap V2 انتقال دهد."
+  ],
+  "xTrustDeployed": "قرارداد هوشمند xTrust در بلاکچین BNB Smart Chain در آدرس زیر مستقر شده است:",
+  "contractAddress": "0xCE7de646e7208a4Ef112cb6ed5038FA6cC6b12e3",
+  "greenTickDescription": "قرارداد هوشمند دارای تیک سبز است که نشان می‌دهد کد ارائه شده با کد منبع ثبت شده در بلاکچین BNB مطابقت دارد.",
+  "supportedTokens": "توکن‌های پشتیبانی شده",
+  "tradesDescription": "تمام معاملات بین توکن‌های فوق و USDT در بلاکچین BNB Smart Chain در آدرس زیر انجام می‌شود:",
+  "usdtAddress": "0x55d398326f99059fF775485246999027B3197955",
+  "consultExpert": "شما می‌توانید با یک متخصص قرارداد هوشمند مشورت کنید تا کد کامل قرارداد هوشمند xTrust را بررسی کرده و از امنیت کامل آن اطمینان حاصل کنید و از هرگونه سوء استفاده جلوگیری کنید.",
+  "viewOnBscScan": "مشاهده قرارداد هوشمند در BscScan"
 }
